# qml-import-test

./: CMakeLists.txt  Main.qml  README.md  main.cpp
A/: A.js  CMakeLists.txt  qmldir
B/: B.js  CMakeLists.txt  qmldir
